--- a/Dywee/CMSBundle/Resources/views/CMS/menu.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/menu.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\CMSBundle\Resources\View\CMS\menu.html.twig #}
 
-<nav class="navbar navbar-dywee">
+<nav class="navbar navbar-default">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
