--- a/Dywee/CMSBundle/Resources/views/CMS/table.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/table.html.twig
@@ -60,23 +60,7 @@
                     </small>
                 </td>
                 <td><small>
-                        {% if page.type == 1 %}
-                            Index
-                        {% elseif page.type == 2 %}
-                            Page
-                        {% elseif page.type == 3 %}
-                            Contact
-                        {% elseif page.type == 4 %}
-                            News
-                        {% elseif page.type == 5 %}
-                            Calendrier
-                        {% elseif page.type == 6 %}
-                            Magasin
-                        {% elseif page.type == 7 %}
-                            Blog
-                        {% else %}
-                            erreur
-                        {% endif %}
+                        {% include 'DyweeCMSBundle:Admin:page_type.html.twig' %}
                     </small></td>
                 <td><small>NC</small></td>
                 <td class="actions">
