--- a/Dywee/CMSBundle/Resources/views/CMS/menu.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/menu.html.twig
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="dywee-navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 {% for page in pageList %}
-                    {% if page.childs is empty %}
+                    {% if page.children is empty %}
                         {% if page.type == 1 %}
                             <li><a href="{{ path('dywee_cms_homepage') }}">{{ page.menuName }}</a></li>
                         {% else %}
@@ -27,7 +27,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ page.menuName }} <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                {% for subPage in page.childs %}
+                                {% for subPage in page.children %}
                                     <li><a href="{{ path('dywee_cms_view', {data: subPage.url}) }}">{{ subPage.menuName }}</a></li>
                                 {% endfor %}
                             </ul>
