Ajout des types galeries aux pages

--- a/Dywee/CMSBundle/Resources/views/Admin/page_type.html.twig
+++ b/Dywee/CMSBundle/Resources/views/Admin/page_type.html.twig
@@ -16,6 +16,12 @@
     Formulaire
 {% elseif page.type == 9 %}
     FAQ
+{% elseif page.type == 10 %}
+    Gallerie Photos
+{% elseif page.type == 11 %}
+    Gallerie vidéos
+{% elseif page.type == 12 %}
+    Gallerie musicale
 {% else %}
     erreur
 {% endif %}
