--- a/Dywee/CMSBundle/Resources/views/CMS/form.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/form.html.twig
@@ -42,6 +42,7 @@
     <li class="active"><a href="#content" data-toggle="tab"><i class="fa fa-font"></i> Contenu</a></li>
     <li><a href="#seo" data-toggle="tab"><i class="fa fa-bar-chart-o"></i> Référencement</a></li>
     <li><a href="#settings" data-toggle="tab"><i class="fa fa-cog"></i> Paramètres</a></li>
+    <li><a href="#help" data-toggle="tab"><i class="fa fa-question"></i> Aide</a></li>
 </ul>
 
 <div class="spacer"></div>
@@ -149,6 +150,37 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="tab-pane fade in" id="help">
+        <h2>Aide sur les pages</h2>
+
+        <p>Avec Dywee, vous pouvez personnaliser vos pages selon plusieurs critères.</p>
+        <p>Dans l'onglet "paramètres" vous pourrez choisir le type de votre page:</p>
+        <h3>Index</h3>
+        <p>Ce type de page est réservé à la page d'accueil. Il n'y en a qu'une seule et unique par page.</p>
+        <h3>Page</h3>
+        <p>Ce type de page est le plus générique. C'est en fait une page normale, sans particularités spécifiques</p>
+        <h3>Contact</h3>
+        <p>Ce type de page est lui-aussi unique. Le fait de renseigné une page comme étant la page "contact" va générer automatiquement un formulaire de contact.</p>
+        <h3>News</h3>
+        <p>La page de news va faire apparaitre automatiquement les dernières news. Le nombre de news visible sur cette page est paramétrable via le champ "argument" situé juste en dessous du type de page</p>
+        <h3>Calendrier</h3>
+        <p>La page de type calendrier va faire apparaitre les évènements à venir</p>
+        <h3>Magasin</h3>
+        <p>Dans le cadre de site d'e-commerce, la page "magasin" fait office de page d'accueil pour vos produits</p>
+        <h4>Blog</h4>
+        <p>C'est typiquement la page d'entrée pour vos articles de blog</p>
+        <h4>Formulaire</h4>
+        <p>Cette page affichera le formulaire défini dans le champ "argument"</p>
+        <h4>FAQ</h4>
+        <p>Cette page spécifique servira de point d'entrée pour afficher toutes les questions/réponses définies dans le module FAQ</p>
+        <h4>Gallerie photo</h4>
+        <p>Cette page servira à afficher l'album photo paramétré dans le champ "argument"</p>
+        <h4>Gallerie vidéo</h4>
+        <p>Cette page servira à afficher la gallerie vidéo paramétrée dans le champ "argument"</p>
+        <h4>Gallerie musique</h4>
+        <p>Cette page servira à afficher la gallerie musicale définie dans le champs "argument"</p>
     </div>
 </div>
 
