--- a/Dywee/CMSBundle/Resources/views/CMS/add.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/add.html.twig
@@ -7,7 +7,12 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Ajout d'une page</h1>
+    <div class="row"><div class="col-md-12">
 
-    {%  include "DyweeCMSBundle:CMS:form.html.twig" %}
+        <h1>Ajout d'une page</h1>
+
+        {%  include "DyweeCMSBundle:CMS:form.html.twig" %}
+
+        </div></div>
+
 {% endblock %}
