--- a/Dywee/CMSBundle/Resources/views/CMS/edit.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/edit.html.twig
@@ -12,7 +12,9 @@
 {% endblock %}
 
 {% block body %}
+    <div class="row"><div class="col-md-12">
     <h1>Modification de {{ page.name }}</h1>
 
     {%  include "DyweeCMSBundle:CMS:form.html.twig" %}
+    </div></div>
 {% endblock %}
