--- a/Dywee/CMSBundle/Resources/views/Templates/default.html.twig
+++ b/Dywee/CMSBundle/Resources/views/Templates/default.html.twig
@@ -8,7 +8,10 @@
 
     <div class="container">
         {% block bodySubContent %}
-            {{ page.content|raw }}
+            {% for pageElement in page.pageElements %}
+                {% set blockElement = pageElement.template %}
+                {% include blockElement %}
+            {% endfor %}
         {% endblock %}
     </div>
 
