--- a/Dywee/CMSBundle/Resources/views/Admin/table.html.twig
+++ b/Dywee/CMSBundle/Resources/views/Admin/table.html.twig
@@ -16,10 +16,10 @@
     {%  for page in pageList %}
         <tr>
             <td><small>{{ loop.index }}</small></td>
-            <td><small>{% if page.parent is not null %}
+            <td>{% if page.parent is not null %}
                         {{ page.parent.name }} <span class="separator"> > </span>
                     {% endif %}
-                    {{ page.name }}</small></td>
+                    <a href="{{ path('dywee_cms_update', {id: page.id}) }}">{{ page.name }}</a></td>
             <td><small>
                     <a href="{{ path('dywee_cms_inMenu_switch', {id: page.id}) }}" class="link-unstyled">
                         {% if page.inMenu == 1 %}
