--- a/Dywee/CMSBundle/Resources/views/CMS/edit.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/edit.html.twig
@@ -11,10 +11,19 @@
     <li><i class="fa fa-pencil"></i> Modification d'une page</li>
 {% endblock %}
 
+{% block stylesheets %}
+    {#<link href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css" rel="stylesheet">#}
+{% endblock %}
+
 {% block body %}
     <div class="row"><div class="col-md-12">
     <h1>Modification de {{ page.name }}</h1>
 
     {%  include "DyweeCMSBundle:CMS:form.html.twig" %}
     </div></div>
+{% endblock %}
+
+{% block footerJavascript %}
+    <script src="{{ asset('bundles/dyweecms/js/form.js') }}"></script>
+    <script src="{{ asset('bundles/dyweecore/js/jquery-ui.min.js') }}"></script>
 {% endblock %}
