--- a/Dywee/CMSBundle/Resources/views/CMS/table.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/table.html.twig
@@ -7,70 +7,15 @@
 {% endblock %}
 
 {% block body %}
-    {% for flashMessage in app.session.flashbag.get('success') %}
-        <div class="alert alert-success"> {{ flashMessage }} </div>
-    {% endfor %}
+    <div class="row">
+        <div class="col-md-12">
+            <a href="{{ path('dywee_cms_add') }}" class="btn btn-success pull-right action-right"><i class="fa fa-plus"></i> Ajouter</a>
 
-    <a href="{{ path('dywee_cms_add') }}" class="btn btn-success pull-right"><i class="fa fa-plus"></i> Ajouter</a>
-
-    <div class="title-heading">
-        <h1 class="text-center">Liste des Pages</h1>
+            <div class="title-heading">
+                <h1 class="text-center">Liste des Pages</h1>
+            </div>
+            {% include 'DyweeCMSBundle:Admin:table.html.twig' %}
+        </div>
     </div>
-    <table class="table table-striped table-hover table-condensed">
-        <thead>
-        <tr>
-            <th class="">#</th>
-            <th>Nom</th>
-            <th>Menu</th>
-            <th>Maj</th>
-            <th>Statut</th>
-            <th>Type</th>
-            <th>Traductions</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {%  for page in pageList %}
-            <tr>
-                <td><small>{{ loop.index }}</small></td>
-                <td>{% if page.parent is not null %}
-                            {{ page.parent.name }} <span class="separator"> > </span>
-                        {% endif %}
-                        {{ page.name }}</small></td>
-                <td><small>
-                        <a href="{{ path('dywee_cms_inMenu_switch', {id: page.id}) }}" class="link-unstyled">
-                            {% if page.inMenu == 1 %}
-                                <i class="fa fa-check"></i>
-                            {% else %}
-                                <i class="fa fa-remove"></i>
-                            {% endif %}
-                        </a>
-                {% if page.inMenu == 1 %} (position:  {{ page.menuOrder }}){% endif %}
-                </small></td>
-                <td><small>{{ page.updateDate|date('d/m/Y à H\\hm') }}
-                        {% if page.updatedBy is not null %}
-                            par {{ page.updatedBy.firstName }}
-                        {% endif %}
-                    </small></td>
-                <td><small>{% if page.state == 0 %}
-                            <span class="label label-warning">Brouillon</span>
-                        {% elseif page.state == 1 %}
-                            <span class="label label-success">Publiée</span>
-                        {%  endif %}
-                    </small>
-                </td>
-                <td><small>
-                        {% include 'DyweeCMSBundle:Admin:page_type.html.twig' %}
-                    </small></td>
-                <td><small>NC</small></td>
-                <td class="actions">
-                    <a href="{{ path('dywee_cms_details', {id: page.id}) }}" class="link-unstyled" target="_blank"><i class="fa fa-eye"></i> </a>
-                    <a href="{{ path('dywee_cms_update', {id: page.id}) }}" class="link-unstyled"><i class="fa fa-pencil"></i> </a>
-                    <a href="{{ path('dywee_cms_delete', {id: page.id}) }}" class="link-unstyled"><i class="fa fa-trash-o"></i> </a>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
 {% endblock %}
