réécriture du bundle et de la gestion des pages

--- a/Dywee/CMSBundle/Resources/views/Templates/index.html.twig
+++ b/Dywee/CMSBundle/Resources/views/Templates/index.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
 
+    {% for pageElement in page.pageElements %}
+        ici
+    {% endfor %}
     {{ page.content|raw }}
 
     {% render(controller('DyweeBlogBundle:Blog:list', {limit: 4})) %}
