--- a/Dywee/CMSBundle/Resources/views/CMS/add.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/add.html.twig
@@ -23,5 +23,8 @@
 {% endblock %}
 
 {% block footerJavascript %}
+    <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
     <script src="{{ asset('bundles/dyweecms/js/form.js') }}"></script>
+    <script src="{{ asset('bundles/dyweecore/js/jquery-ui.min.js') }}"></script>
 {% endblock %}
