--- a/Dywee/CMSBundle/Resources/views/Form/collection_widget.html.twig
+++ b/Dywee/CMSBundle/Resources/views/Form/collection_widget.html.twig
@@ -10,15 +10,16 @@
                 <div class="col-xs-12">
                     <div class="box" >
                         <div class="box-header with-border">
-                            <h3 class="box-title"></h3>
+                            <h3 class="box-title"><i class="fa fa-spinner fa-spin"></i> </h3>
                             <div class="box-tools pull-right">
                                 <!-- Buttons, labels, and many other things can be placed here! -->
                                 <!-- Here is a label for example -->
-                                <span class="label label-primary">Label</span>
+                                <a href="#" class="btn btn-xs btn-default"><i class="fa fa-arrows"></i> </a>
                             </div><!-- /.box-tools -->
                         </div><!-- /.box-header -->
                         <div class="box-body">
                             {{ form_widget(rows.type, { 'attr': { 'class': 'form-control' }}) }}
+                            {{ form_widget(rows.displayOrder) }}
                             <div class="hide">
                                 {{ form_widget(rows.content, { 'attr': { 'class': 'form-control' }}) }}
                             </div>
@@ -44,11 +45,12 @@
                     <div class="box-tools pull-right">
                         <!-- Buttons, labels, and many other things can be placed here! -->
                         <!-- Here is a label for example -->
-                        <span class="label label-primary">Label</span>
+                        <a href="#" class="btn btn-xs btn-default"><i class="fa fa-arrows"></i> </a>
                     </div><!-- /.box-tools -->
                 </div><!-- /.box-header -->
                 <div class="box-body">
                     {{ form_widget(prototype.type, { 'attr': { 'class': 'form-control' }}) }}
+                    {{ form_widget(prototype.displayOrder) }}
                     <div class="hide">
                         {{ form_widget(prototype.content, { 'attr': { 'class': 'form-control' }}) }}
                     </div>
