Généralisation de la gestion + gestion du carousel

--- a/Dywee/CMSBundle/Resources/views/CMS/menu.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/menu.html.twig
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand brand" href="{{ path('dywee_cms_homepage') }}">Dywee</a>
+            <a class="navbar-brand brand" href="{{ path('dywee_cms_homepage') }}">{{ websiteName }}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
