--- a/Dywee/CMSBundle/Resources/views/CMS/footer.html.twig
+++ b/Dywee/CMSBundle/Resources/views/CMS/footer.html.twig
@@ -3,20 +3,9 @@
         <div class="footer-main">
             <div class="row">
                 <div class="col-xs-12 col-center">
-                    {{ render(controller('DyweeCMSBundle:Menu:navbar', {position: 'footer'})) }}
+                    {% render(controller('DyweeCMSBundle:Menu:navbar', {position: 'footer'})) %}
                 </div>
-                <div class="col-xs-12">
-                    <div class="footer-top">
-                        <div class="col-md-3 footer-news">
-                            <h5>Newsletter</h5>
-                        </div>
-                        <div class="col-md-9 ftr-email">
-                            <input type="text" class="form-control">
-                            <input type="submit" value="SUBSCRIBE" >
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
+                {% render(controller('DyweeNewsletterBundle:Newsletter:form', {request: app.request})) %}
                 <div class="col-xs-12">
                     <div class="footer-bottom">
                         <ul class="ftr-socialicons">
