--- a/Resources/views/CMS/form.html.twig
+++ b/Resources/views/CMS/form.html.twig
@@ -40,11 +40,11 @@
         </div>
 
         <div class="form-group">
-            {#{{ form_errors(form.pageElements) }}
+            {{ form_errors(form.pageElements) }}
 
             <div id="page_elements_container">
                 {{ form_widget(form.pageElements) }}
-            </div>#}
+            </div>
 
         </div>
         {% if page is defined and page.type == 12 %}
