--- a/Resources/views/CMS/menu.html.twig
+++ b/Resources/views/CMS/menu.html.twig
@@ -1,5 +1,7 @@
 {# Dywee\CMSBundle\Resources\View\CMS\menu.html.twig #}
 
+{% include 'DyweeCMSBundle:Nav:header.html.twig' %}
+
 <nav class="navbar navbar-default">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -10,7 +12,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand brand" href="{{ path('dywee_cms_homepage') }}">{{ websiteName }}</a>
+            {% if websiteName is defined and websiteName is not null %}
+                <a class="navbar-brand brand" href="{{ path('cms_homepage') }}">{{ websiteName }}</a>
+            {% endif %}
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,16 +23,16 @@
                 {% for page in pageList %}
                     {% if page.children is empty %}
                         {% if page.type == 1 %}
-                            <li><a href="{{ path('dywee_cms_homepage') }}">{{ page.menuName }}</a></li>
+                            <li><a href="{{ path('cms_homepage') }}">{{ page.menuName }}</a></li>
                         {% else %}
-                            <li><a href="{{ path('dywee_cms_view', {data: page.url}) }}">{{ page.menuName }}</a></li>
+                            <li><a href="{{ path('cms_view', {data: page.url}) }}">{{ page.menuName }}</a></li>
                         {% endif %}
                     {% else %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ page.menuName }} <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 {% for subPage in page.children %}
-                                    <li><a href="{{ path('dywee_cms_view', {data: subPage.url}) }}">{{ subPage.menuName }}</a></li>
+                                    <li><a href="{{ path('cms_view', {data: subPage.url}) }}">{{ subPage.menuName }}</a></li>
                                 {% endfor %}
                             </ul>
                         </li>
