--- a/Resources/views/Page/add.html.twig
+++ b/Resources/views/Page/add.html.twig
@@ -11,7 +11,7 @@
 
         <h1>Ajout d'une page</h1>
 
-        {%  include "DyweeCMSBundle:CMS:form.html.twig" %}
+        {%  include "DyweeCMSBundle:Page:form.html.twig" %}
 
         </div></div>
 
