--- a/Resources/views/Page/edit.html.twig
+++ b/Resources/views/Page/edit.html.twig
@@ -10,7 +10,7 @@
     <div class="row"><div class="col-md-12">
     <h1>Modification de {{ page.name }}</h1>
 
-    {%  include "DyweeCMSBundle:CMS:form.html.twig" %}
+    {%  include "DyweeCMSBundle:Page:form.html.twig" %}
     </div></div>
 {% endblock %}
 
