--- a/Resources/views/Nav/menu.html.twig
+++ b/Resources/views/Nav/menu.html.twig
@@ -2,8 +2,10 @@
 
 {% include 'DyweeCMSBundle:Nav:header.html.twig' %}
 
-<div class="banner-top">
+<div class="inner-banner">
     <div class="container">
-        {% include 'DyweeCMSBundle:Nav:navbar.html.twig' %}
+        <div class="banner-top inner-head">
+            {% include 'DyweeCMSBundle:Nav:navbar.html.twig' %}
+        </div>
     </div>
 </div>
