ajout de la gestion des formulaires

--- a/Resources/views/admin.html.twig
+++ b/Resources/views/admin.html.twig
@@ -1,4 +1,4 @@
-{# Dywee\CMSBundle\Resources\View\admin.html.twig #}
+{# Dywee\CMSBundle\Resources\views\admin.html.twig #}
 
 {% extends "DyweeCoreBundle::admin.html.twig" %}
 
