--- a/Resources/views/Page/miniTable.html.twig
+++ b/Resources/views/Page/miniTable.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\CMSBundle\Resources\View\Admin\table.html.twig #}
 
-<table class="table table-striped table-hover table-condensed">
+<table class="table table-striped table-hover">
     <thead>
     <tr>
         <th class="">#</th>
@@ -15,12 +15,12 @@
     <tbody>
     {%  for page in pageList %}
         <tr>
-            <td><small>{{ loop.index }}</small></td>
+            <td>{{ loop.index }}</td>
             <td>{% if page.parent is not null %}
                         {{ page.parent.name }} <span class="separator"> > </span>
                     {% endif %}
                     <a href="{{ path('page_update', {id: page.id}) }}">{{ page.name }}</a></td>
-            <td><small>
+            <td>
                     <a href="{{ path('page_inMenu_switch', {id: page.id}) }}" class="link-unstyled">
                         {% if page.inMenu == 1 %}
                             <i class="fa fa-check"></i>
@@ -29,26 +29,29 @@
                         {% endif %}
                     </a>
             {% if page.inMenu == 1 %} (position:  {{ page.menuOrder }}){% endif %}
-            </small></td>
-            <td><small>{{ page.updateDate|date('d/m/Y') }}
+            </td>
+            <td>{{ page.updateDate|date('d/m/Y à H\\hi') }}
                     {% if page.updatedBy is not null %}
                         par {{ page.updatedBy.firstName }}
                     {% endif %}
-                </small></td>
-            <td><small>{% if page.state == 0 %}
+                </td>
+            <td>{% if page.state == 0 %}
                         <span class="label label-warning">Brouillon</span>
                     {% elseif page.state == 1 %}
                         <span class="label label-success">Publiée</span>
                     {%  endif %}
-                </small>
+                
             </td>
-            <td><small>
+            <td>
                     {% include 'DyweeCMSBundle:Page:page_type.html.twig' %}
-                </small></td>
-            <td class="actions">
-                <a href="{{ path('page_details', {id: page.id}) }}" class="link-unstyled" target="_blank"><i class="fa fa-eye"></i> </a>
-                <a href="{{ path('page_update', {id: page.id}) }}" class="link-unstyled"><i class="fa fa-pencil"></i> </a>
-                <a href="{{ path('page_delete', {id: page.id}) }}" class="link-unstyled"><i class="fa fa-trash-o"></i> </a>
+                </td>
+            <td>
+                <div class="btn-group btn-group-xs">
+                    <a href="{{ path('page_details', {id: page.id}) }}" class="btn btn-default" target="_blank"><i class="fa fa-eye"></i> </a>
+                    <a href="{{ path('page_update', {id: page.id}) }}" class="btn btn-default"><i class="fa fa-pencil"></i> </a>
+                </div>
+
+                <a href="{{ path('page_delete', {id: page.id}) }}" class="btn btn-xs btn-danger"><i class="fa fa-trash-o"></i> </a>
             </td>
         </tr>
     {% endfor %}
