Traduction des états et type de page

--- a/Resources/views/Render/musicGallery.html.twig
+++ b/Resources/views/Render/musicGallery.html.twig
@@ -1,1 +1,1 @@
-{% render(controller('DyweeModuleBundle:MusicGallery:render', {id: pageElement.content})) %}
+{#{% render(controller('DyweeModuleBundle:MusicGallery:render', {id: pageElement.content})) %}#}
