--- a/Resources/views/Page/miniTable.html.twig
+++ b/Resources/views/Page/miniTable.html.twig
@@ -35,8 +35,8 @@
                         par {{ page.updatedBy.firstName }}
                     {% endif %}
                 </td>
-            <td>{{ page.state }}</td>
-            <td>{{ page.type }}</td>
+            <td>{{ page.state|trans }}</td>
+            <td>{{ page.type|trans }}</td>
             <td>
                 <div class="btn-group btn-group-xs">
                     <a href="{{ path('page_details', {id: page.id}) }}" class="btn btn-default" target="_blank"><i class="fa fa-eye"></i> </a>
