--- a/Resources/views/Render/carousel.html.twig
+++ b/Resources/views/Render/carousel.html.twig
@@ -1,1 +1,1 @@
-{% render(controller('DyweeModuleBundle:Carousel:render', {id: pageElement.content})) %}
+{#{% render(controller('DyweeModuleBundle:Carousel:render', {id: pageElement.content})) %}#}
