gestion des events

--- a/Resources/views/Nav/navbar.html.twig
+++ b/Resources/views/Nav/navbar.html.twig
@@ -16,7 +16,7 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="dywee-navbar-collapse">
+        <div class="collapse navbar-collapse" id="dywee-navbar-collapcreatese">
             <ul class="nav navbar-nav navbar-right">
                 {% for page in pageList %}
                     {% if page.children is empty %}
