--- a/Resources/views/Nav/header.html.twig
+++ b/Resources/views/Nav/header.html.twig
@@ -8,13 +8,7 @@
                 </ul>
             </div>
             <div class="header-right">
-                <div class="cart box_1">
-                    <a href="checkout.html">
-                        <h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>)<img src="{{ asset('bundles/dyweecms/images/bag.png') }}" alt=""></h3>
-                    </a>
-                    <p><a href="javascript:;" class="simpleCart_empty">Empty cart</a></p>
-                    <div class="clearfix"> </div>
-                </div>
+                {% include 'DyweeCMSBundle:Nav:header_right.html.twig' %}
             </div>
             <div class="clearfix"> </div>
         </div>
