--- a/Resources/views/CMS/footer.html.twig
+++ b/Resources/views/CMS/footer.html.twig
@@ -8,14 +8,14 @@
                 {% if page.type == 1 %}
                     <li><a href="{{ path('cms_homepage') }}">{{ page.menuName }}</a></li>
                 {% else %}
-                    <li><a href="{{ path('cms_view', {data: page.url}) }}">{{ page.menuName }}</a></li>
+                    <li><a href="{{ path('page_view', {data: page.url}) }}">{{ page.menuName }}</a></li>
                 {% endif %}
             {% else %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ page.menuName }} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         {% for subPage in page.children %}
-                            <li><a href="{{ path('cms_view', {data: subPage.url}) }}">{{ subPage.menuName }}</a></li>
+                            <li><a href="{{ path('page_view', {data: subPage.url}) }}">{{ subPage.menuName }}</a></li>
                         {% endfor %}
                     </ul>
                 </li>
