title twig block name update

--- a/Resources/views/Admin/view.html.twig
+++ b/Resources/views/Admin/view.html.twig
@@ -2,7 +2,7 @@
 
 {%  extends "DyweeCMSBundle::admin.html.twig" %}
 
-{% block title %} Coup d'oeil sur une page - {{ parent() }} {% endblock %}
+{% block metaTitle %} Coup d'oeil sur une page - {{ parent() }} {% endblock %}
 
 {% block body %}
 
