--- a/Resources/views/CustomForm/edit.html.twig
+++ b/Resources/views/CustomForm/edit.html.twig
@@ -2,7 +2,7 @@
 
 {%  extends "DyweeCMSBundle::admin.html.twig" %}
 
-{% block title %}
+{% block metaTitle %}
     Modification d'un formulaire {{ parent() }}
 {% endblock %}
 
