--- a/Resources/views/FormResponse/view.html.twig
+++ b/Resources/views/FormResponse/view.html.twig
@@ -2,7 +2,7 @@
 
 {%  extends "DyweeCMSBundle::admin.html.twig" %}
 
-{% block title %}
+{% block metaTitle %}
     Coup d'oeil sur une réponse de formulaire {{ parent() }}
 {% endblock %}
 
