--- a/Resources/views/Templates/default.html.twig
+++ b/Resources/views/Templates/default.html.twig
@@ -23,7 +23,7 @@
         </div>
     {% endfor %}
 
-    {% block title %}<h1>{{ page.name }}</h1>{% endblock %}
+    {% block metaTitle %}<h1>{{ page.name }}</h1>{% endblock %}
 
     <div class="container">
         {% block bodySubContent %}
