--- a/Resources/views/Admin/details.html.twig
+++ b/Resources/views/Admin/details.html.twig
@@ -2,7 +2,7 @@
 
 {%  extends "DyweeCMSBundle::admin.html.twig" %}
 
-{% block title %}
+{% block metaTitle %}
     Détails  sur une page {{ parent() }}
 {% endblock %}
 
