--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -2,7 +2,7 @@
 
 {%  extends "::layout.html.twig" %}
 
-{% block title %}
+{% block metaTitle %}
     {{ page.name }} {{ parent() }}
 {% endblock %}
 
