--- a/Resources/views/Page/table.html.twig
+++ b/Resources/views/Page/table.html.twig
@@ -2,7 +2,7 @@
 
 {%  extends "DyweeCMSBundle::admin.html.twig" %}
 
-{% block title %}
+{% block metaTitle %}
     Liste de vos pages {{ parent() }}
 {% endblock %}
 
