--- a/Resources/views/Page/add.html.twig
+++ b/Resources/views/Page/add.html.twig
@@ -1,19 +1,21 @@
 {# Dywee\CMSBundle\Resources\View\CMS\edit.html.twig #}
 
-{%  extends "DyweeCMSBundle::admin.html.twig" %}
+{% extends "DyweeCMSBundle::admin.html.twig" %}
 
 {% block metaTitle %}
     Ajout d'une page {{ parent() }}
 {% endblock %}
 
 {% block body %}
-    <div class="row"><div class="col-md-12">
+    <div class="row">
+        <div class="col-md-12">
 
-        <h1>Ajout d'une page</h1>
+            <h1>Ajout d'une page</h1>
 
-        {%  include "DyweeCMSBundle:Page:form.html.twig" %}
+            {% include "DyweeCMSBundle:Page:form.html.twig" %}
 
-        </div></div>
+        </div>
+    </div>
 
 {% endblock %}
 
