--- a/Resources/views/Page/edit.html.twig
+++ b/Resources/views/Page/edit.html.twig
@@ -1,17 +1,19 @@
 {# Dywee\CMSBundle\Resources\View\CMS\edit.html.twig #}
 
-{%  extends "DyweeCMSBundle::admin.html.twig" %}
+{% extends "DyweeCMSBundle::admin.html.twig" %}
 
 {% block metaTitle %}
     Modification d'une page {{ parent() }}
 {% endblock %}
 
 {% block body %}
-    <div class="row"><div class="col-md-12">
-    <h1>Modification de {{ page.name }}</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Modification de {{ page.name }}</h1>
 
-    {%  include "DyweeCMSBundle:Page:form.html.twig" %}
-    </div></div>
+            {% include "DyweeCMSBundle:Page:form.html.twig" %}
+        </div>
+    </div>
 {% endblock %}
 
 {% block footerJavascript %}
